--- a/build.gradle
+++ b/build.gradle
@@ -7,20 +7,20 @@ group 'com.froobworld'
 version '2.0.0'
 jar.enabled = false;
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.17
+targetCompatibility = 1.17
 
 repositories {
     mavenLocal();
     mavenCentral()
     maven {
+        url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
         url "https://papermc.io/repo/repository/maven-public/"
     }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
-    compile 'org.bstats:bstats-bukkit:2.0.1'
+    compileOnly 'io.papermc.paper:paper-api:1.18.1-R0.1-SNAPSHOT'
 }
 
 processResources {
@@ -29,8 +29,6 @@ processResources {
 
 shadowJar {
     archiveFileName = 'SAML-' + project.version.toString() + '.jar';
-
-    relocate 'org.bstats', 'com.froobworld.saml.lib.bstats'
 }
 
 artifacts {
