--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,26 @@ targetCompatibility = 1.17
 repositories {
     mavenLocal();
     mavenCentral()
-    maven {
-        url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
-        url "https://papermc.io/repo/repository/maven-public/"
-    }
+    maven { url "https://repo.bg-software.com/repository/nms/" }
+    maven { url "https://papermc.io/repo/repository/maven-public/" }
+    maven { url "https://libraries.minecraft.net/" }
+    maven { url "https://papermc.io/repo/repository/maven-public/" }
 }
 
 dependencies {
-    compileOnly 'io.papermc.paper:paper-api:1.18.1-R0.1-SNAPSHOT'
+    compileOnly "org.spigotmc:v1_18_R1-Paper:b68"
+
+    compileOnly 'io.papermc.paper:paper-api:1.18.1-R0.1-20211210.153434-2'
+
+    compileOnly 'com.mojang:authlib:3.2.38'
+    compileOnly 'com.mojang:datafixerupper:4.0.26'
+    compileOnly 'com.mojang:brigadier:1.0.18'
+    compileOnly 'com.google.guava:guava:31.0.1-jre'
+    compileOnly 'com.google.code.gson:gson:2.8.9'
+    compileOnly 'net.kyori:adventure-key:4.9.3'
+    compileOnly 'net.kyori:examination-api:1.3.0'
+    compileOnly 'net.kyori:adventure-api:4.9.3'
+    compileOnly 'net.md-5:bungeecord-chat:1.16-R0.4'
 }
 
 processResources {
